# fifteen

./: README.md  pyproject.toml
src/fifteen/: __init__.py  cli.py
tests/: test_fifteen.py
