[project]
name = "fifteen"
version = "0.1.0"
description = "Simple 15-puzzle game library and CLI."
readme = "README.md"
authors = [
    { name = "Joshua Smith", email = "josmithua@pm.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fifteen = "fifteen.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
